# agrobotarmcontrol

./: CMakeLists.txt  README.md  package.xml
config/: joints.yaml
launch/: config.rviz  display.launch  gazebo.launch  manual_control.launch  rviz.launch
scripts/: MotorModuleController.py  export_csv_motor_data.py  generate_motion_plan_manual.py  manual_control.py  motor_controller.py  motor_controller_manual.py  motor_controller_simulation.py  rviz_start.py  tool_changer.py
scripts/data_analysis/: precision_test_data.py
scripts/motion_plans/: check_validity.py  motion_plan_example.csv  motion_plan_forpic.csv  motion_plan_precision_test.py  motion_plan_scratch.py  run_motion_plan_csv.py
scripts/motor_data_analysis/: agrobot_arm_v2_motor_analysis.urdf  motor_data_start.csv  motor_data_test1.csv  motor_data_test2.csv  plot_motor_data.py
scripts/rviz_data/: accuracy_test1.csv  accuracy_test2.csv  accuracy_test3.csv  accuracy_test4.csv  new_rviz_data_RENAME.csv  precision_test1.csv  precision_test10.csv  precision_test2.csv  precision_test3.csv  precision_test4.csv  precision_test5.csv  precision_test6.csv  precision_test7.csv  precision_test8.csv  precision_test9.csv
urdf/: agrobot_arm_v2.csv  agrobot_arm_v2.urdf
